# tech-prog-tasks

./: .gitmodules  README.md
.github/workflows/: main.yml
task1/: run.sh
task2/: .gitignore  CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: functional_tests.cpp  main.cpp  main.h  main_test.cpp
task3/: .gitignore  CMakeLists.txt
task3/src/: CMakeLists.txt
task4/tests/01-simple-library/: AddTestCase.cpp  AddTestCase.h  LeapTestCase.cpp  LeapTestCase.h
task4/tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
task4/tests/03-weather/: WeatherMock.h  WeatherTestCase.cpp  WeatherTestCase.h
task5/: CMakeLists.txt
task5/B/: CMakeLists.txt
task6/: docker-compose.yml
task6/DostavimVse/: Dockerfile  script.sh
task6/cmake-with-flask/: .dockerignore  Dockerfile
